--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -44,6 +44,11 @@ RUN /bin/zsh -c "source $HOME/.zshrc && pyenv global $PYTHON_VERSION"
 ENV PYTORCH_INSTALL_CMD="pip install torch==1.12.1+cu116 torchvision torchaudio --extra-index-url https://download.pytorch.org/whl/cu116"
 RUN /bin/zsh -c "source $HOME/.zshrc && $PYTORCH_INSTALL_CMD"
 
+# Download and install vitcifar-10 Python module
+RUN git clone https://github.com/luiscarlosgph/vitcifar10.git $HOME
+RUN cd $HOME/vitcifar10 && python3 setup.py install
+RUN rm -r $HOME/vitcifar10
+
 # Start services and run the user-specified command
 ADD files/entrypoint.sh /opt/entrypoint.sh
 RUN chmod +x /opt/entrypoint.sh
